--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -59,10 +59,13 @@
 }
 
 html {
-	font-size: 14px;
+	/* overflow-y: scroll;
+	scroll-behavior: smooth; */
 }
 
 body {
+	font-size: 15px;
+
 	min-height: 100vh;
 	color: var(--color-text);
 	background: var(--color-background);
@@ -125,4 +128,18 @@ main.main-container {
 	background-image: url(/src/assets/user-theme-1.png);
 	background-repeat: repeat;
 	background-size: contain;
+}
+
+.p-button {
+	font-size: 1.2rem;
+
+	padding-top: 0.9rem;
+	padding-bottom: 0.9rem;
+	padding-left: 1.5rem;
+	padding-right: 1.5rem;
+
+	min-height: 44px;
+	min-width: 44px;
+
+	box-sizing: border-box;
 }
